# spada

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
spada/: __init__.py
spada/core/: __init__.py  exporter.py  layer.py  project.py
spada/core/templates/: dashboard.html
spada/core/templates/css/: atribut.css  base.css  chart.css  layout.css  pivot.css  vm.css
spada/core/templates/js/: atribut.js  chart.js  helpers.js  map.js  pivot.js  vm.js
spada/gui/: __init__.py  main_window.py  preview.py  style_panel.py  styles.py  widgets.py
tests/: __init__.py  test_exporter.py  test_layer.py
